--- a/index.html
+++ b/index.html
@@ -1,49 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-NCTNC76V');</script>
-    <!-- End Google Tag Manager -->
-
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Melitzana Guest House, in the heart of the Island of Ortigia, Sicilia, Italia</title>
+    <title>Atelier Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta
-        content="Guest House,hotel,motel,hostal, guest,house,room rental,house rental,lodging,airbnb,vacation accommodation,vacation accommodation,vacation room,hotel on the beach,hotel on long road,hotel in sicily,picturesque hotel,private room in sicily italy,trips in search of adventure,romantic getaways,vacaciones familiares,viajes de negocios o celebraciones de bodas,cheap hotels in sicily italy,"
-        name="keywords">
-    <meta content="Melitzana Guest House, in the heart of the Island of Ortigia, Sicilia, Italia" name="description">
+    <meta content="Atelier Colibri" name="keywords">
+    <meta content="Atelier Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@Melitzana Guest House, in the heart of the Island of Ortigia">
-    <meta name="twitter:title" content="Melitzana Guest House">
-    <meta name="twitter:description"
-        content="Melitzana Guest House, in the heart of the Island of Ortigia, Sicilia, Italia">
+    <meta name="twitter:site" content="@Atelier Colibri">
+    <meta name="twitter:title" content="Atelier Colibri">
+    <meta name="twitter:description" content="Atelier Colibri">
     <meta name="robots" content="index, follow">
     <meta name="Audience" content="All">
 
-    <meta property="og:site_name" content="Melitzana Guest House">
+    <meta property="og:site_name" content="Atelier Colibri">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Melitzana Guest House">
+    <meta property="og:title" content="Atelier Colibri">
     <meta property="og:locale" content="en">
-    <meta property="og:title" content="Melitzana Guest House">
-    <meta property="og:description"
-        content="Melitzana Guest House, in the heart of the Island of Ortigia, Sicilia, Italia">
-    <meta property="og:url" content="https://Melitzana.com/">
+    <meta property="og:title" content="Atelier Colibri">
+    <meta property="og:description" content="Atelier Colibri">
+    <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
@@ -55,7 +40,7 @@
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
-    <link rel="canonical" href="https://melitzana.com/" />
+    <link rel="canonical" href="https://artsoulcolibri.com/" />
     <!-- Canonical End -->
 
     <!-- Google Web Fonts -->
@@ -78,32 +63,15 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
-    
-
-    <!-- search console Indexar pagina start -->
-    <meta name="google-site-verification" content="onaJtCiFNy-4PgpHcRLyktPSiCZlecFOTW3cMk0gP48" />
-    <!-- search console Indexar pagina End -->
-
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GW8ZXEHS84"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-GW8ZXEHS84');
-</script>
-
 
 <body>
 
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCTNC76V"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCTNC76V" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner"
@@ -119,7 +87,7 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
-                        <img class="img-fluid" src="img/logo barra nav.png" alt="Icon"
+                        <img class="img-fluid" src="img/logo barr nav.jpg" alt="Icon"
                             style="width: 200px; height: 55px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
@@ -130,10 +98,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="thespace.html" class="nav-item nav-link">The space</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                        <a href="Testimonials.html" class="nav-item nav-link">Testimonials</a>
-                        <a href="reservations.html" class="nav-item nav-link">Reservations</a>
+                        <a href="Testimonials.html" class="nav-item nav-link">Cursos</a>
                     </div>
                 </div>
             </nav>
@@ -144,38 +110,21 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5 class="display-5 animated fadeIn mb-4">Is a Charming Suite, in the heart of the Island of
-                        Ortigia<span class="text-secondary"></span></h5>
-                    <p class="animated fadeIn mb-4 pb-2">A UNESCO world heritage site. The property is located in via
-                        Larga a distinctive street within the restricted traffic area, ideally located for visiting the
-                        city on foot, immersing yourself in the characteristic atmosphere of the alleys of Ortigia. Only
-                        50 mt to the Ionic Sea beaches and a few minutes’ walk to all of Ortigia’s historical sites such
-                        as Piazza Duommo, Castello Maniace, Chiesa de Santa Lucia Abadia, Aretusa Spring, Diana
-                        Fountain, Temple of Apollo, also the local market, bars, cafes, museums, restaurants and shops
-                        and 65 km from Fontanarossa airport..</p>
+                    <h5 class="display-5 animated fadeIn mb-4">Atelier Colibri<span class="text-secondary"></span></h5>
+                    <p class="animated fadeIn mb-4 pb-2">• Art Soul & Spirit • Art & Self-knowledge
+                        • of Colors to Inspire and Shine your Life • Self-knowledge the way to your Essence • DM to
+                        Order🇵🇹..</p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse1.webp" alt="">
+                            <img class="img-fluid" src="img/carrouselateliercolibri1.png" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse2.webp" alt="">
+                            <img class="img-fluid" src="img/carrouselateliercolibri2.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse3.webp" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse4.webp" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse5.webp" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse6.webp" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselmelitzanaguesthouse7.jpg" alt="">
+                            <img class="img-fluid" src="img/carrouselateliercolibri3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -185,7 +134,7 @@
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
-            onclick="window.location.href='https://wa.me/393517952707?text=.!%20.%20.%20.%20.%20.'">
+            onclick="window.location.href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
 
@@ -197,13 +146,13 @@
                         <h5 class="text-white mb-4">Get in touch</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Via Larga, 4796100 Siracusa SR IT
                         </p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+393517952707</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>melitzanaguesthouse@gmail.com</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/melitzanaguesthouse"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.airbnb.com/slink/2Uv58YPi"><i
-                                    class="fab fa-airbnb"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-airbnb"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -217,27 +166,27 @@
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse1.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse2.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse3.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse4.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse5.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse6.jpg"
+                                <img class="img-fluid rounded bg-light p-1" src=""
                                     alt="">
                             </div>
                         </div>
@@ -248,7 +197,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Melitzana Guest House</a>, All rights reserved.
+                            &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights reserved.
                             Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
