--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
-                        <img class="img-fluid" src="img/logo barra nav.png" alt="Icon"
+                        <img class="img-fluid" src="img/logo barr nav.jpg" alt="Icon"
                             style="width: 200px; height: 55px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
@@ -283,14 +283,13 @@
                     <h5 class="text-white mb-4">Get in touch</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Via Larga, 4796100 Siracusa SR IT
                     </p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+393517952707</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>melitzanaguesthouse@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social"
-                            href="https://www.instagram.com/melitzanaguesthouse"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="https://www.airbnb.com/slink/2Uv58YPi"><i
-                                class="fab fa-airbnb"></i></a>
+                            href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-airbnb"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -304,27 +303,27 @@
                     <h5 class="text-white mb-4">Photo Gallery</h5>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse1.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse2.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse3.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse4.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse5.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded bg-light p-1" src="img/gallerymelitsanaguesthouse6.jpg"
+                            <img class="img-fluid rounded bg-light p-1" src=""
                                 alt="">
                         </div>
                     </div>
@@ -335,7 +334,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Melitzana Guest House</a>, All rights reserved.
+                        &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights reserved.
                         Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
@@ -355,18 +354,18 @@
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-    </div>
+</div>
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 
 </html>
