--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Via Larga, 4796100 Siracusa SR IT
-                        </p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Porto, Portugal</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
