--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-                    <div>
-                        <img class="img-fluid" src="img/logo barr nav.jpg" alt="Icon"
-                            style="width: 200px; height: 55px;">
+                    <div class="icon p-2 me-2">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon" style="width: 50px; height: 50px;">
                     </div>
-                    <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
+                    <h4 class="m-0 text-primary">ART SOUL COLIBRI</h4>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -99,7 +98,7 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                        <a href="Testimonials.html" class="nav-item nav-link">Cursos</a>
+                        <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
                 </div>
             </nav>
@@ -148,10 +147,8 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-airbnb"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
