--- a/cursos.html
+++ b/cursos.html
@@ -66,6 +66,12 @@
 </head>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCTNC76V" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner"
@@ -76,16 +82,14 @@
         </div>
         <!-- Spinner End -->
 
-
         <!-- Navbar Start -->
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-                    <div>
-                        <img class="img-fluid" src="img/logo barr nav.jpg" alt="Icon"
-                            style="width: 200px; height: 55px;">
+                    <div class="icon p-2 me-2">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon" style="width: 50px; height: 50px;">
                     </div>
-                    <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
+                    <h5 class="m-0 text-primary">ART SOUL COLIBRI</h5>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
