--- a/gallery.html
+++ b/gallery.html
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/favicon.ico.png" rel="icon">
+    <link href="img/logofaviconico.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/favicon.ico.png">
+    <link rel="icon" href="img/logofaviconico.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
