--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon" style="width: 50px; height: 50px;">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                            style="width: 50px; height: 50px;">
                     </div>
                     <h6 class="m-0 text-primary">ART SOUL COLIBRI</h6>
                 </a>
@@ -107,7 +108,7 @@
                     <h5 class="display-5 animated fadeIn mb-4">Atelier Colibri<span class="text-secondary"></span></h5>
                     <p class="animated fadeIn mb-4 pb-2">• Art Soul & Spirit • Art & Self-knowledge
                         • of Colors to Inspire and Shine your Life • Self-knowledge the way to your Essence • DM to
-                        Order🇵🇹..</p>
+                        Order🇵🇹.</p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
@@ -157,28 +158,22 @@
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src=""
-                                    alt="">
+                                <img class="img-fluid rounded bg-light p-1" src="" alt="">
                             </div>
                         </div>
                     </div>
