--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <!-- Navbar End -->
 
-        <!-- Header Start -->
+        <!-- Carrousel Start -->
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
@@ -113,19 +113,22 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselateliercolibri1.png" alt="">
+                            <img class="img-fluid" src="img/carrousel1.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselateliercolibri2.jpg" alt="">
+                            <img class="img-fluid" src="img/carrousel2.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrouselateliercolibri3.jpg" alt="">
+                            <img class="img-fluid" src="img/carrousel3.jpeg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carrousel4.jpeg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Header End -->
+        <!-- Carrousel End -->
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
