--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel1.jpeg" alt="">
+                            <img class="img-fluid" src="img/logoateleiercolibricirculo_carrousel.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carrousel2.jpeg" alt="">
@@ -136,7 +136,7 @@
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
+            <div class="container py-2">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
